syntax = "proto3";

option go_package = "scannerV1";

option java_package = "io.stackrox.proto.api.scanner.v1";

package scannerV1;

message Feature {
    string                 name                 = 1;
    string                 version              = 2;
    repeated Vulnerability vulnerabilities      = 3;
    string                 feature_type         = 4;
    string                 added_by_layer       = 5;
    string                 location             = 6;
    repeated Executable    provided_executables = 7;
}

message Executable {
    string path = 1;
}

// Next tag: 7
message Vulnerability {
    string   name        = 1;
    string   description = 2;
    string   link        = 3;
    reserved 4; // previous: bytes metadata
    Metadata metadata_v2 = 6;
    string   fixed_by    = 5;
    string   severity    = 7;
}

message Metadata {
    string       published_date_time     = 1;
    string       last_modified_date_time = 2;
    CVSSMetadata cvss_v2                 = 3;
    CVSSMetadata cvss_v3                 = 4;
}

message CVSSMetadata {
    string vector               = 1;
    float  score                = 2;
    float  exploitability_score = 3;
    float  impact_score         = 4;
}
